// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: clamp(8px, 0.5vw + 6px, 16px) !important;
  margin: 0 !important;
  white-space: nowrap !important;
  vertical-align: middle;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for multiline: true 1`] = `
":host {
  display: table-cell !important;
  padding: clamp(8px, 0.5vw + 6px, 16px) !important;
  margin: 0 !important;
  white-space: normal !important;
  vertical-align: middle;
}
:host([hidden]) {
  display: none !important;
}"
`;
